feat: Add integration tests for ChatService methods
- getChatHistory:
  * Seed ai_chat_message with user/assistant messages
  * Verify messages are mapped to ChatMessageDto and returned in DESC order
- findAll:
  * Seed chats_by_created with two chats
  * Verify chats are mapped to ChatDto and returned in DESC order
- findMessagesByChatId:
  * Seed ai_chat_message with 10 messages (+1s each)
  * Verify pagination works (3+3+3+1) and ordering is preserved